# nanobot

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  ContextForAI.md  DEVELOPMENT.md  Dockerfile  Dockerfile.ultra  Makefile  README.md  RELEASE_WORKFLOW.md  SECURITY.md  TEST.md  cspell.json  docker-compose.yml  pyproject.toml  requirements.txt  requirements.ultra.txt  rumdl.toml  typos.toml
.agents/skills/pawpsicle-overview/: SKILL.md
bridge/src/: index.ts
deploy/: ALIYUN_SETUP.md  README.md  deploy-to-vps.sh  release.sh  rollback.sh  uninstall-from-vps.sh  verify.sh
nanobot/agent/: context.py  loop.py  memory.py  skills.py  subagent.py
nanobot/agent/tools/: base.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
nanobot/bus/: queue.py
nanobot/channels/: base.py  discord.py  email.py  feishu.py  manager.py  matrix.py  slack.py  telegram.py
nanobot/cli/: commands.py
nanobot/config/: loader.py  schema.py
nanobot/cron/: service.py  types.py
nanobot/heartbeat/: service.py
nanobot/providers/: __init__.py  base.py  custom_provider.py  litellm_provider.py  transcription.py
nanobot/session/: manager.py
nanobot/skills/: README.md
nanobot/skills/clawhub/: SKILL.md
nanobot/skills/cron/: SKILL.md
nanobot/skills/github/: SKILL.md
nanobot/skills/tmux/: SKILL.md
nanobot/templates/: AGENTS.md
nanobot/utils/: helpers.py
pawpsicle/: __init__.py  __main__.py
pawpsicle/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
pawpsicle/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
pawpsicle/bus/: __init__.py  events.py  queue.py
pawpsicle/channels/: __init__.py  base.py  feishu.py  manager.py
pawpsicle/cli/: __init__.py  commands.py
pawpsicle/config/: __init__.py  loader.py  schema.py
pawpsicle/cron/: __init__.py  service.py
pawpsicle/heartbeat/: __init__.py  service.py
pawpsicle/providers/: __init__.py  base.py  custom_provider.py  transcription.py
pawpsicle/session/: __init__.py  manager.py
pawpsicle/templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
pawpsicle/utils/: __init__.py  helpers.py
scripts/: create_skill.py  skill_spec.md
tests/: test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_cron_commands.py  test_cron_service.py  test_email_channel.py  test_heartbeat_service.py  test_matrix_channel.py  test_memory_consolidation_types.py  test_message_tool.py  test_message_tool_suppress.py  test_task_cancel.py  test_tool_validation.py
(+1 files in other folders)
