[project]
name = "pawpsicle-ai"
version = "0.1.0"
description = "A lightweight personal AI assistant framework"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "pawpsicle contributors" }]
keywords = ["ai", "agent", "chatbot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.20.0,<1.0.0",
    "litellm>=1.81.5,<2.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "httpx>=0.28.0,<1.0.0",
    "loguru>=0.7.3,<1.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "rich>=14.0.0,<15.0.0",
    "croniter>=6.0.0,<7.0.0",
    "lark-oapi>=1.5.0,<2.0.0",
    "prompt-toolkit>=3.0.50,<4.0.0",
    "mcp>=1.26.0,<2.0.0",
    "json-repair>=0.57.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "ruff>=0.1.0",
    "rumdl>=0.1.0",
    "ty>=0.0.19",
    "hatch-vcs>=0.4.0",
    "uv>=0.1.0",
]

[project.scripts]
pawpsicle = "pawpsicle.cli.commands:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["pawpsicle"]

[tool.hatch.build.targets.wheel.sources]
"pawpsicle" = "pawpsicle"

# Include non-Python files in skills and templates
[tool.hatch.build]
include = [
    "pawpsicle/**/*.py",
    "pawpsicle/templates/**/*.md",
    "pawpsicle/skills/**/*.md",
    "pawpsicle/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = ["pawpsicle/", "README.md", "LICENSE"]


[tool.ruff]
line-length = 108
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.rumdl]
line-length = 108
disable = ["MD013", "MD041"]
extend-enable = ["MD060", "MD063", "MD072", "MD073", "MD074"]

[tool.rumdl.MD007]
indent = 2

[tool.rumdl.MD060]
enabled = true
style = "aligned-no-space"

[tool.typos.default]
locale = "en"

[tool.typos.default.extend-words]
pawsicle = "pawpsicle"
powsicle = "pawpsicle"
pawcicle = "pawpsicle"
powcicle = "pawpsicle"
pawpcicle = "pawpsicle"
powpcicle = "pawpsicle"

[tool.typos.files]
extend-exclude = [
    "*.lock",
    "*.min.js",
    "*.map",
    "__pycache__/",
    ".venv/",
    "node_modules/",
]
